# glyphkeeper

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: backup_restore.py  backup_restore_world.py  check_schema.py  create_tables.py  demo_usage_logging.py  ingest_investigator.py  ingest_module.py  ingest_rules.py  init_db.py  init_rules_db.py  init_session.py  inspect_backup.py  inspect_graph.py  manage_worlds.py  print_usage_summary.py  reset_all_data.py  test_workspace_isolation.py  verify_db.py
src/agents/: README.md  __init__.py  adjudicator.py  analyzer.py  archivist.py  assembler.py  memorizer.py  narrator.py  orchestrator.py  rule_keeper.py  search.py  writer.py
src/components/: base.py  combat.py  dice.py  health.py  navigation.py  physical.py  resolver.py  sanity.py  social.py
src/core/: __init__.py  config.py  events.py  fsm.py  game_engine.py  logger.py
src/ingestion/: __init__.py  loader.py  pdf_parser.py  structure_extractor.py
src/interfaces/: __init__.py  api_server.py  cli_runner.py
src/llm/: __init__.py  llm_base.py  llm_factory.py  llm_lightrag.py  llm_openai.py
src/memory/: RAG_engine.py  README.md  __init__.py  bridge.py  database.py  episodic_memory.py  manager.py  models.py  rule_service.py  semantic_memory.py  storage.py  strategies.py  vector_store.py
template/: config.yaml.template  providers.ini.template
tests/: demo_chat_memory.py  demo_episodic_memory.py  demo_memory_check.py  demo_narrator.py  demo_opening.py  demo_rule_service.py  demo_world_manager.py  lightrag_test.py  test_llm_tools.py  test_token_tracker.py
(+21 files in other folders)
