[project]
name = "glyphkeeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncpg>=0.31.0",
    "lightrag-hku[api]>=1.4.9.10",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.45",
    "tokenizers>=0.22.1",
]
